# sanitize

./: CMakeLists.txt  README.md  version.h.in
include/sanitize/: sanitize.hpp
src/: sanitize.cpp
tests/: test_sanitize.cpp
